[package]
name = "armada"
version = "1.0.2"
authors = ["d0nut <d0nut@resync.gg>"]
edition = "2018"
description = "A high performance TCP SYN port scanner."
repository = "https://github.com/resyncgg/armada"
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false


[dependencies]
atty = "0.2"
async-trait = "0.1"
armada_lib = "1.0" 
cidr-utils = "0.5"
clap = { version = "2.33", features = ["yaml"] }
console = "0.14"
indicatif = "0.15"
rand = "0.8.3"
regex = "1.4"
lazy_static = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
