[package]
name = "armada"
version = "1.1.3"
authors = ["d0nut <d0nut@resync.gg>"]
edition = "2018"
description = "A high performance TCP SYN port scanner."
repository = "https://github.com/resyncgg/armada"
license = "CC-BY-NC-SA-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false


[dependencies]
atty = "0"
async-trait = "0"
armada_lib = { version = "1", path = "../armada_lib" }
cidr-utils = "0"
clap = { version = "3", features = ["cargo"] }
console = "0"
indicatif = "0"
rand = "0"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
