[package]
name = "armada_lib"
version = "1.0.2"
authors = ["d0nut <d0nut@resync.gg>"]
description = "A high performance TCP SYN port scanner library."
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/resyncgg/armada"
edition = "2018"

[lib]
name = "armada_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr-utils = "0.5"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
libc = "0.2"
num-traits = "0.2"
pnet = "0.28"
pnet_sys = "0.28"
pnet_packet = "0.28"
regex = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process"]}
tokio-stream = "0.1"
tracing = "0.1"
twox-hash = "1.6"
rand = "0.8"
